# comparing-random-testing-and-bmc

./: Readme.md
deepbug/: .gitignore  Readme.md  build.sbt
deepbug/plots/: arbitrated_2_avg_input_len.csv  arbitrated_2_avg_time.csv  arbitrated_3_avg_input_len.csv  arbitrated_3_avg_time.csv  arbitrated_4_avg_input_len.csv  arbitrated_4_avg_time.csv  circular-fifo_avg_input_len.csv  circular-fifo_avg_time.csv  deepbug_avg_input_len.csv  deepbug_avg_time.csv  shift-fifo_avg_input_len.csv  shift-fifo_avg_time.csv
deepbug/scripts/: plot.py  sweep_arbitrated.py  sweep_circular_fifo.py  sweep_deepbug.py  sweep_shift_fifo.py  utils.py
differential-coverage-metric/: .gitignore  Readme.md
differential-coverage-metric/cov-analysis/: .gitignore  SignalTracker.sv  analyze.py  verilator_conf.vlt
differential-coverage-metric/instrumentation/: build.sbt
differential-coverage-metric/miner/: .gitignore  Cargo.toml  diff.sv
differential-coverage-metric/miner/src/: extract.rs  main.rs  mine.rs
differential-coverage-metric/scripts/: Makefile  analyze.py  benchmark.py  convert_traces.py  fuzz.py  fuzz.sh  instrument_afl_cover.py  make_signal_tracker.py  parse_log.py
or1200-bugs/: Readme.md
or1200-bugs/formal/: .gitignore  check.sby  check_no_zero_init.sby  check_specs.sby  harness.v  inst_check.v  or1200_assertions.v  or1200_assumptions.v  specs_assertions.v
rfuzz/: Readme.md
rfuzz/FFTSmall/: cover_btormc.sby
rfuzz/Sodor1Stage/: Sodor1Stage_formal.sv  cover_btormc.sby
(+12038 files in other folders)
